# error-detect-research

./: .env.example  .gitignore  ARTIFACT.md  CITATION.cff  Dockerfile  LICENSE  README.md  _apply_patches.py  check_progress.py  docker-compose.yml  pyproject.toml  requirements.txt
.playwright-mcp/: page-2026-07-10T08-04-55-452Z.yml  page-2026-07-11T05-47-11-017Z.yml
benchmarks/: DESENSITIZED_REAL_SOFL_PILOT.md  GITHUB_HARVEST_README.md  INDUSTRIAL_SOFL_README.md  PUBLISHED_INDUSTRIAL_PILOT_README.md  REAL_PRIORITY_MICRO_README.md  e12_stratified_30.json  e6_decisive_18.json  e6_headroom_test_only.json  external_sofl.json  fixed_oracle_headroom.json  github_harvest_v1.json  github_harvest_v1_rejected.json  hard_all_120_ids.json  hard_all_120_ids_slice30_60.json  hard_task_ids_80.json  hard_task_ids_extra40.json  hard_tasks.json  hkca09_ids.json  hkca09_sofl_fsf.json  industrial_pub_fsf.json  industrial_pub_ids.json  industrial_sofl.json  industrial_sofl_validation.json  manual_heldout.json  published_industrial_pilot.json  published_industrial_pilot_validation.json  random_tasks_annotated.json  real_headroom_e6.json  real_headroom_e6_ids.json  real_overlap_hard.json  real_overlap_hard_ids.json  real_priority_micro_v1.json  real_priority_micro_v1_validation.json  realspec_all_ids.json  realspec_b1_fail.json  realspec_b1_fail_ids.json  realspec_ids_15_40.json  realspec_ids_20_40.json  realspec_ids_40.json  tasks.json
experiments/: EXPERIMENT_SCHEME.md  analyze.py  backfill_attempt_history.py  merge_runs.py  monitor_progress.py  run_all.py  run_e14_sweep.py  run_sweep.py  (+5 more)
(+490 files in other folders)
