[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "error-detect-research"
version = "0.1.0"
description = "Agile-SOFL integrated error prevention research pipeline"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.40.0",
  "python-dotenv>=1.0.0",
  "z3-solver>=4.12.0",
  "pyyaml>=6.0",
  "pandas>=2.0.0",
  "scipy>=1.11.0",
  "matplotlib>=3.8.0",
  "seaborn>=0.13.0",
  "numpy>=1.26.0",
  "jinja2>=3.1.0",
  "tqdm>=4.66.0",
  "tabulate>=0.9.0",
  "jsonschema>=4.22.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
